# ur5e_cell

color_pose_estimation/: package.xml  setup.py
color_pose_estimation/color_pose_estimation/: color_pose_estimation.py  detect_color.py  detect_color_scene.py  registration.py
color_pose_estimation/utils/: cube2.ply
color_pose_msgs/: CMakeLists.txt
ur5e_cell_manipulation/: CMakeLists.txt  launch_gui.sh  package.xml
ur5e_cell_manipulation/config/: behavior.xml  behavior2.xml  color_array_bt copy.xml  color_array_bt.xml  color_unique_bt.xml  moveitcpp.yaml  static_bt.xml
ur5e_cell_manipulation/include/ur5e_cell_manipulation/: detect_aruco_node_anna.hpp  detect_color_node.hpp  gripper_node.hpp  manipulation_behaviour_manager.hpp  manipulation_color_unique_scenario.hpp  manipulation_static_scenario.hpp
ur5e_cell_manipulation/include/ur5e_cell_manipulation/behavior_tree/: detect_color_array_node.hpp  detect_color_unique_node.hpp
ur5e_cell_manipulation/launch/: manipulation_color_scenario.launch.py  manipulation_color_unique_scenario.launch.py  manipulation_driver.launch.py  manipulation_perception.launch.py  manipulation_static_scenario.launch.py
ur5e_cell_manipulation/scripts/: nice_gui_tests.py
ur5e_cell_manipulation/src/: main_manipulation_color_scenario.cpp  main_manipulation_color_unique_scenario.cpp  main_manipulation_static_scenario.cpp
ur5e_cell_manipulation/src/app/: manipulation_color_scenario.cpp
ur5e_cell_moveit_config/config/: pilz_cartesian_limits.yaml
